--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner"
+            android:id="@+id/spinner3"
             android:entries="@array/ExtraQueries" />
 
         <EditText
@@ -88,5 +88,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="292dp"
-        android:layout_marginStart="292dp" />
+        android:layout_marginStart="292dp"
+        android:onClick="query" />
 </RelativeLayout>
