--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,25 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+    </ScrollView>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:weightSum="1">
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:id="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Query Select"
+            android:text="Query Select - Press Donut To Search!"
             android:id="@+id/textView"
             android:layout_gravity="center_horizontal" />
 
@@ -91,36 +97,28 @@
             android:spinnerMode="dropdown"
             android:entries="@array/ZIP" />
 
-        <EditText
+        <ListView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:ems="10"
-            android:id="@+id/editText"
-            android:layout_weight="0.57"
-            android:editable="false" />
+            android:layout_height="match_parent"
+            android:id="@+id/listView"
+            android:layout_gravity="center_horizontal"
+            android:entries="@array/Course" />
+
     </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send"
-        android:id="@+id/buttonQuery"
-        android:layout_alignParentBottom="true"
+    <ImageView
+        android:layout_width="144dp"
+        android:layout_height="104dp"
+        android:id="@+id/imageView"
+        android:src="@drawable/donut"
+        android:clickable="true"
+        android:onClick="query"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="292dp"
-        android:layout_marginStart="292dp"
-        android:onClick="query" />
+        android:layout_marginLeft="284dp"
+        android:layout_marginStart="284dp"
+        android:layout_marginTop="518dp" />
 
-    <ImageView
-        android:layout_width="79dp"
-        android:layout_height="79dp"
-        android:id="@+id/imageView"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/donut"
-        android:layout_alignTop="@+id/buttonQuery"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
