--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-    </ScrollView>
 
     <LinearLayout
         android:orientation="vertical"
@@ -20,12 +15,35 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Query Select - Press Donut To Search!"
-            android:id="@+id/textView"
-            android:layout_gravity="center_horizontal" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="73dp"
+                android:layout_height="73dp"
+                android:id="@+id/imageView"
+                android:src="@drawable/donut"
+                android:clickable="true"
+                android:onClick="query"
+                android:layout_gravity="right"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:elevation="5dp"
+                android:layout_marginLeft="5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/query_select"
+                android:id="@+id/textView4"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textAlignment="center"
+                android:paddingRight="5dp" />
+        </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
@@ -105,20 +123,6 @@
             android:entries="@array/Course" />
 
     </LinearLayout>
-
-    <ImageView
-        android:layout_width="144dp"
-        android:layout_height="104dp"
-        android:id="@+id/imageView"
-        android:src="@drawable/donut"
-        android:clickable="true"
-        android:onClick="query"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="284dp"
-        android:layout_marginStart="284dp"
-        android:layout_marginTop="518dp" />
 
 
 </RelativeLayout>
