--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,8 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/listView"
-            android:layout_gravity="center_horizontal"
-            android:entries="@array/Course" />
+            android:layout_gravity="center_horizontal" />
 
     </LinearLayout>
 
